footer arreglado y formulario

--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -38,14 +38,14 @@
         <hr id="hrch">
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion5.png" alt="archivo no encontrado"><br><br>Nombre: Armonía Silvestre<br><br>Descripcion: Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br>Precio: $12.99<br><br><button style="margin-top: 10%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion6.png" alt="archivo no encontrado"><br><br>Nombre: Esencia del Bosque<br><br>Descripcion: Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br>Precio: $9.99<br><br><button style="margin-top: 3%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion8.png" alt="archivo no encontrado"><br><br>Nombre: Aliento del Océano<br><br>Descripcion: Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br>Precio: $14.99<br><br><button style="margin-top: 10%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion5.png" alt="archivo no encontrado"><br><br>Nombre: Armonía Silvestre<br><br>Descripcion: Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br>Precio: $12.99<br><br><button onclick="formulario()" style="margin-top: 10%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion6.png" alt="archivo no encontrado"><br><br>Nombre: Esencia del Bosque<br><br>Descripcion: Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 3%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion8.png" alt="archivo no encontrado"><br><br>Nombre: Aliento del Océano<br><br>Descripcion: Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()" style="margin-top: 10%;">Comprar</button></fieldset>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion9.png" alt="archivo no encontrado"><br><br>Nombre: Canto de las Montañas<br><br>Descripcion: Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br>Precio: $16.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion10.png" alt="archivo no encontrado"><br><br>Nombre: Aura de Cielo<br><br>Descripcion: Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br>Precio: $8.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion11.png" alt="archivo no encontrado"><br><br>Nombre: Serenata Nocturna<br><br>Descripcion: Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br>Precio: $8.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion9.png" alt="archivo no encontrado"><br><br>Nombre: Canto de las Montañas<br><br>Descripcion: Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br>Precio: $16.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion10.png" alt="archivo no encontrado"><br><br>Nombre: Aura de Cielo<br><br>Descripcion: Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion11.png" alt="archivo no encontrado"><br><br>Nombre: Serenata Nocturna<br><br>Descripcion: Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <div id="division_catalogo">
         <hr>
@@ -53,30 +53,33 @@
         <hr>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion1.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Ensueño<br><br>Descripcion: Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br>Precio: $12.99<br><br>Promocion: 3 X $30.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion3.png" alt="archivo no encontrado"><br><br>Nombre: Fragancia de Luna<br><br>Descripcion: Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br><button style="margin-top:22%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion4.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br>Precio: $14.99<br><br>Promocion: Locion + Frasco X $24.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion1.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Ensueño<br><br>Descripcion: Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br>Precio: $12.99<br><br>Promocion: 3 X $30.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion3.png" alt="archivo no encontrado"><br><br>Nombre: Fragancia de Luna<br><br>Descripcion: Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br><button onclick="formulario()" style="margin-top:22%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion4.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br>Precio: $14.99<br><br>Promocion: Locion + Frasco X $24.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             <div id="parte1">
-            <div id="Footer1">
-            <h3>Acerca de la empresa</h3>
-            <p>Acerca de nosotros</p>
-            <p>Contactenos</p>
-            <p>Terminos y condiciones</p>
-            <p>Politica y privacidad</p>
+                <div id="Footer1">
+                    <h3>Acerca de la empresa</h3>
+                    <p>Acerca de nosotros</p>
+                    <p>Contactenos</p>
+                    <p>Terminos y condiciones</p>
+                    <p>Politica y privacidad</p>
+                </div>
+                <div id="Footer2">
+                    <h3>Mas informacion</h3>
+                    <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
+                    <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
+                    <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                </div>
             </div>
-            <div id="Footer2">
-            <h3>Mas informacion</h3>
-            <img class="footer-img" src="footer/facebook.png" alt="facebook">
-            <img class="footer-img" src="footer/instagran.png" alt="Instagram">
-            <img class="footer-img" src="footer/x.png" alt="X">
-            <img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp">
-            </div>
-            </div>
-
     </footer>
 </body>
-</body>
 </html>
+<script>
+    function formulario(){
+        location.href = "formulario/formulario_compra.html"
+    }
+</script>
