--- a/catalogo_mujeres.html
+++ b/catalogo_mujeres.html
@@ -38,14 +38,14 @@
         <hr id="hrch">
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m4.png" alt="archivo no encontrado"><br><br>Nombre: Éxtasis de Jazmín Nocturno<br><br>Descripcion:  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br>Precio: $12.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m5.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Rosas Encantadas<br><br>Descripcion: Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br>Precio: $9.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m6.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Lavanda Serena<br><br>Descripcion:  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br>Precio: $14.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m4.png" alt="archivo no encontrado"><br><br>Nombre: Éxtasis de Jazmín Nocturno<br><br>Descripcion:  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br>Precio: $12.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m5.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Rosas Encantadas<br><br>Descripcion: Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m6.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Lavanda Serena<br><br>Descripcion:  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m7.png" alt="archivo no encontrado"><br><br>Nombre: Suspiro de Cerezas Rosadas<br><br>Descripcion:  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br>Precio: $16.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m8.png" alt="archivo no encontrado"><br><br>Nombre: Encanto de Orquídeas<br><br>Descripcion: Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br>Precio: $14.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m9.png" alt="archivo no encontrado"><br><br>Nombre: Rocío de Mariposas Doradas<br><br>Descripcion: Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br>Precio: $8.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m7.png" alt="archivo no encontrado"><br><br>Nombre: Suspiro de Cerezas Rosadas<br><br>Descripcion:  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br>Precio: $16.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m8.png" alt="archivo no encontrado"><br><br>Nombre: Encanto de Orquídeas<br><br>Descripcion: Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m9.png" alt="archivo no encontrado"><br><br>Nombre: Rocío de Mariposas Doradas<br><br>Descripcion: Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <div id="division_catalogo">
         <hr>
@@ -53,30 +53,33 @@
         <hr>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m1.png" alt="archivo no encontrado"><br><br>Nombre: Coco Mademoiselle<br><br>Descripcion: Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m2.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m3.png" alt="archivo no encontrado"><br><br>Nombre: Aroma de Luna Plateada<br><br>Descripcion: Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br>Precio: $14.99<br><br>Promocion: 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m1.png" alt="archivo no encontrado"><br><br>Nombre: Coco Mademoiselle<br><br>Descripcion: Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m2.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m3.png" alt="archivo no encontrado"><br><br>Nombre: Aroma de Luna Plateada<br><br>Descripcion: Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br>Precio: $14.99<br><br>Promocion: 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             <div id="parte1">
-            <div id="Footer1">
-            <h3>Acerca de la empresa</h3>
-            <p>Acerca de nosotros</p>
-            <p>Contactenos</p>
-            <p>Terminos y condiciones</p>
-            <p>Politica y privacidad</p>
+                <div id="Footer1">
+                    <h3>Acerca de la empresa</h3>
+                    <p>Acerca de nosotros</p>
+                    <p>Contactenos</p>
+                    <p>Terminos y condiciones</p>
+                    <p>Politica y privacidad</p>
+                </div>
+                <div id="Footer2">
+                    <h3>Mas informacion</h3>
+                    <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
+                    <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
+                    <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                </div>
             </div>
-            <div id="Footer2">
-            <h3>Mas informacion</h3>
-            <img class="footer-img" src="footer/facebook.png" alt="facebook">
-            <img class="footer-img" src="footer/instagran.png" alt="Instagram">
-            <img class="footer-img" src="footer/x.png" alt="X">
-            <img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp">
-            </div>
-            </div>
-
     </footer>
 </body>
-</body>
 </html>
+<script>
+    function formulario(){
+        location.href = "formulario/formulario_compra.html"
+    }
+</script>
