--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -38,14 +38,14 @@
         <hr id="hrch">
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l2.png" alt="archivo no encontrado"><br><br>Nombre: Brillo de Estrellas Suaves<br><br>Descripcion:  Esta loción mágica está llena de extractos de manzanilla y aloe vera para calmar y suavizar la piel delicada de tu pequeño.  50ml<br><br>Precio: $8.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l6.png" alt="archivo no encontrado"><br><br>Nombre: Aventura en la Jungla Fresca<br><br>Descripcion: ¡Prepárate para una aventura emocionante con esta loción refrescante!. 50ml<br><br>Precio: $8.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l15.png" alt="archivo no encontrado"><br><br>Nombre: Caricias de Nube Encantada<br><br>Descripcion:  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br>Precio: $9.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l2.png" alt="archivo no encontrado"><br><br>Nombre: Brillo de Estrellas Suaves<br><br>Descripcion:  Esta loción mágica está llena de extractos de manzanilla y aloe vera para calmar y suavizar la piel delicada de tu pequeño.  50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l6.png" alt="archivo no encontrado"><br><br>Nombre: Aventura en la Jungla Fresca<br><br>Descripcion: ¡Prepárate para una aventura emocionante con esta loción refrescante!. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l15.png" alt="archivo no encontrado"><br><br>Nombre: Caricias de Nube Encantada<br><br>Descripcion:  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l1.png" alt="archivo no encontrado"><br><br>Nombre: Dulce Sueño de Unicornio<br><br>Descripcion: Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br>Precio: 8.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l4.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Mariposas<br><br>Descripcion: Déjate envolver por la suavidad de esta loción encantada. 50ml<br><br>Precio: $9.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l8.png" alt="archivo no encontrado"><br><br>Nombre: Abrazo de Osito Carinoso<br><br>Descripcion: Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br>Precio: $7.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l1.png" alt="archivo no encontrado"><br><br>Nombre: Dulce Sueño de Unicornio<br><br>Descripcion: Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br>Precio: 8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l4.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Mariposas<br><br>Descripcion: Déjate envolver por la suavidad de esta loción encantada. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l8.png" alt="archivo no encontrado"><br><br>Nombre: Abrazo de Osito Carinoso<br><br>Descripcion: Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br>Precio: $7.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <div id="division_catalogo">
         <hr>
@@ -53,29 +53,33 @@
         <hr>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l10.png" alt="archivo no encontrado"><br><br>Nombre: Susurro del Bosque<br><br>Descripcion: Embárcate en una aventura mágica con esta loción inspirada en la naturaleza. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X 19.99<br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l13.png" alt="archivo no encontrado"><br><br>Nombre: Cuentos de Luna y Estrellas<br><br>Descripcion: Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br>Precio: $7.99<br><br>Promocion: 3 X 20.99 <br><br><button>Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l14.png" alt="archivo no encontrado"><br><br>Nombre: Brillito de Luna y Mariposa<br><br>Descripcion: Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br>Precio: $8.99<br><br>Promocion: 3 X 25.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l10.png" alt="archivo no encontrado"><br><br>Nombre: Susurro del Bosque<br><br>Descripcion: Embárcate en una aventura mágica con esta loción inspirada en la naturaleza. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X 19.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l13.png" alt="archivo no encontrado"><br><br>Nombre: Cuentos de Luna y Estrellas<br><br>Descripcion: Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br>Precio: $7.99<br><br>Promocion: 3 X 20.99 <br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l14.png" alt="archivo no encontrado"><br><br>Nombre: Brillito de Luna y Mariposa<br><br>Descripcion: Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br>Precio: $8.99<br><br>Promocion: 3 X 25.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             <div id="parte1">
-            <div id="Footer1">
-            <h3>Acerca de la empresa</h3>
-            <p>Acerca de nosotros</p>
-            <p>Contactenos</p>
-            <p>Terminos y condiciones</p>
-            <p>Politica y privacidad</p>
+                <div id="Footer1">
+                    <h3>Acerca de la empresa</h3>
+                    <p>Acerca de nosotros</p>
+                    <p>Contactenos</p>
+                    <p>Terminos y condiciones</p>
+                    <p>Politica y privacidad</p>
+                </div>
+                <div id="Footer2">
+                    <h3>Mas informacion</h3>
+                    <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
+                    <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
+                    <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                </div>
             </div>
-            <div id="Footer2">
-            <h3>Mas informacion</h3>
-            <img class="footer-img"  src="footer/facebook.png" alt="facebook">
-            <img class="footer-img"  src="footer/instagran.png" alt="Instagram">
-            <img class="footer-img"  src="footer/x.png" alt="X">
-            <img class="footer-img"  src="footer/whatsapp.png" alt="Whatsapp">
-            </div>
-            </div>
-
     </footer>
 </body>
 </html>
+<script>
+    function formulario(){
+        location.href = "formulario/formulario_compra.html"
+    }
+</script>
