cartas de bootstrap

--- a/contacto/contactanos.html
+++ b/contacto/contactanos.html
@@ -38,13 +38,13 @@
     <div class="contact-container">
         <form action="enviar.php" method="post">
             <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <input type="text" id="nombre" name="nombre" style="width: 97%;" required>
 
             <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" style="width: 97%;" required>
 
             <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" required></textarea>
+            <textarea id="mensaje" name="mensaje" style="width: 97%;" required></textarea>
 
             <button type="submit">Enviar</button>
         </form>
