--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body background="imagenes/fondo-acuarela-azul-rosa.avif" style="background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
     <header > <!-- style="text-align: center;" -->
@@ -32,30 +33,96 @@
         </div>
     </header>
     
-    <div id="division_catalogo">
-        <hr id="hrch">
-        <h1>Bienvenid@ al catalogo de niñ@s</h1>
-        <hr id="hrch">
+    <div class="row" id="division_catalogo">
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-8">
+            <h1 class="col-md-12">Bienvenid@ al catalogo de Niños</h1>
+        </div>
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l2.png" alt="archivo no encontrado"><br><br>Nombre: Brillo de Estrellas Suaves<br><br>Descripcion:  Esta loción mágica está llena de extractos de manzanilla y aloe vera para calmar y suavizar la piel delicada de tu pequeño.  50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l6.png" alt="archivo no encontrado"><br><br>Nombre: Aventura en la Jungla Fresca<br><br>Descripcion: ¡Prepárate para una aventura emocionante con esta loción refrescante!. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l15.png" alt="archivo no encontrado"><br><br>Nombre: Caricias de Nube Encantada<br><br>Descripcion:  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l2.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Brillo de Estrellas Suaves<br><br><b>Descripcion:</b>  Esta loción mágica está llena de extractos de manzanilla y aloe vera para calmar y suavizar la piel delicada de tu pequeño.  50ml<br><br><b>Precio:</b> $8.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l6.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Aventura en la Jungla Fresca<br><br><b>Descripcion:</b> ¡Prepárate para una aventura emocionante con esta loción refrescante!. 50ml<br><br><b>Precio:</b> $8.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l15.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Caricias de Nube Encantada<br><br><b>Descripcion:</b>  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br><b>Precio:</b> $9.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>      
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l1.png" alt="archivo no encontrado"><br><br>Nombre: Dulce Sueño de Unicornio<br><br>Descripcion: Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br>Precio: 8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l4.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Mariposas<br><br>Descripcion: Déjate envolver por la suavidad de esta loción encantada. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l8.png" alt="archivo no encontrado"><br><br>Nombre: Abrazo de Osito Carinoso<br><br>Descripcion: Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br>Precio: $7.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Dulce Sueño de Unicornio<br><br><b>Descripcion:</b> Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br><b>Precio:</b> 8.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Melodía de Mariposas<br><br><b>Descripcion:</b> Déjate envolver por la suavidad de esta loción encantada. 50ml<br><br><b>Precio:</b> $9.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Abrazo de Osito Carinoso<br><br><b>Descripcion:</b> Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br><b>Precio:</b> $7.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>        
     </div>
-    <div id="division_catalogo">
-        <hr>
-        <h1>Promociones</h1>
-        <hr>
-    </div>
+    <div class="row" id="division_catalogo">
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-4">
+            <h1 class="col-md-12">Promociones</h1>
+        </div>
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
+    </div>  
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l10.png" alt="archivo no encontrado"><br><br>Nombre: Susurro del Bosque<br><br>Descripcion: Embárcate en una aventura mágica con esta loción inspirada en la naturaleza. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X 19.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l13.png" alt="archivo no encontrado"><br><br>Nombre: Cuentos de Luna y Estrellas<br><br>Descripcion: Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br>Precio: $7.99<br><br>Promocion: 3 X 20.99 <br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/img-niños/l14.png" alt="archivo no encontrado"><br><br>Nombre: Brillito de Luna y Mariposa<br><br>Descripcion: Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br>Precio: $8.99<br><br>Promocion: 3 X 25.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Susurro del Bosque<br><br><b>Descripcion:</b> Embárcate en una aventura mágica con esta loción inspirada en la naturaleza. 50ml<br><br><b>Precio:</b> $6.99<br><br><b>Promocion:</b> 3 X 19.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Cuentos de Luna y Estrellas<br><br><b>Descripcion:</b> Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br><b>Precio:</b> $7.99<br><br><b>Promocion:</b> 3 X 20.99 <br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Brillito de Luna y Mariposa<br><br><b>Descripcion:</b> Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br><b>Precio:</b> $8.99<br><br><b>Promocion:</b> 3 X 25.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>      
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
