--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body bgcolor="gray">
+<body bgcolor="white">
     <header > <!-- style="text-align: center;" -->
         <div class="contenedor-prin">
             <nav>
@@ -32,30 +33,96 @@
         </div>
     </header>
     
-    <div id="division_catalogo">
-        <hr id="hrch">
-        <h1>Bienvenid@ al catalogo de hombres</h1>
-        <hr id="hrch">
+    <div class="row" id="division_catalogo">
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-8">
+            <h1 class="col-md-12">Bienvenid@ al catalogo de hombres</h1>
+        </div>
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion5.png" alt="archivo no encontrado"><br><br>Nombre: Armonía Silvestre<br><br>Descripcion: Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br>Precio: $12.99<br><br><button onclick="formulario()" style="margin-top: 10%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion6.png" alt="archivo no encontrado"><br><br>Nombre: Esencia del Bosque<br><br>Descripcion: Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 3%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion8.png" alt="archivo no encontrado"><br><br>Nombre: Aliento del Océano<br><br>Descripcion: Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()" style="margin-top: 10%;">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion5.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Armonía Silvestre<br><br><b>Descripcion:</b> Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br><b>Precio:</b> $12.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion6.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Esencia del Bosque<br><br><b>Descripcion:</b> Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br><b>Precio:</b> $9.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion8.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Aliento del Océano<br><br><b>Descripcion:</b> Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br><b>Precio:</b> $14.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 18%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion9.png" alt="archivo no encontrado"><br><br>Nombre: Canto de las Montañas<br><br>Descripcion: Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br>Precio: $16.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion10.png" alt="archivo no encontrado"><br><br>Nombre: Aura de Cielo<br><br>Descripcion: Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion11.png" alt="archivo no encontrado"><br><br>Nombre: Serenata Nocturna<br><br>Descripcion: Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion9.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Canto de las Montañas<br><br><b>Descripcion:</b> Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br><b>Precio:</b> $16.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion10.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Aura de Cielo<br><br><b>Descripcion:</b> Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br><b>Precio:</b> $8.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion11.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Serenata Nocturna<br><br><b>Descripcion:</b> Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br><b>Precio:</b> $8.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
     </div>
-    <div id="division_catalogo">
-        <hr>
-        <h1>Promociones</h1>
-        <hr>
+    <div class="row" id="division_catalogo">
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-4">
+            <h1 class="col-md-12">Promociones</h1>
+        </div>
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion1.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Ensueño<br><br>Descripcion: Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br>Precio: $12.99<br><br>Promocion: 3 X $30.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion3.png" alt="archivo no encontrado"><br><br>Nombre: Fragancia de Luna<br><br>Descripcion: Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br><button onclick="formulario()" style="margin-top:22%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion4.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br>Precio: $14.99<br><br>Promocion: Locion + Frasco X $24.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion1.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Bruma de Ensueño<br><br><b>Descripcion:</b> Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br><b>Precio:</b> $12.99<br><br><b>Promocion:</b> 3 X $30.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 29%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion3.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Fragancia de Luna<br><br><b>Descripcion:</b> Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br><b>Precio:</b> $10.99<br><br><b>Promocion:</b> 3 X $25.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 38%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion4.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Rocío del Amanecer<br><br><b>Descripcion:</b> Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> Locion + Frasco X $24.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
