--- a/catalogo_mujeres.html
+++ b/catalogo_mujeres.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body bgcolor="pink">
+<body style="background-color: pink;">
     <header > <!-- style="text-align: center;" -->
         <div class="contenedor-prin">
             <nav>
@@ -31,31 +32,96 @@
             </nav>
         </div>
     </header>
-    
-    <div id="division_catalogo">
-        <hr id="hrch">
-        <h1>Bienvenid@ al catalogo de mujeres</h1>
-        <hr id="hrch">
+    <div class="row" id="division_catalogo">
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-8">
+            <h1 class="col-md-12">Bienvenid@ al catalogo de mujeres</h1>
+        </div>
+        <div class="col-md-2">
+            <hr id="hrch">
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m4.png" alt="archivo no encontrado"><br><br>Nombre: Éxtasis de Jazmín Nocturno<br><br>Descripcion:  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br>Precio: $12.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m5.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Rosas Encantadas<br><br>Descripcion: Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br>Precio: $9.99<br><br><button onclick="formulario()" style="margin-top: 14%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m6.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Lavanda Serena<br><br>Descripcion:  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m4.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Éxtasis de Jazmín Nocturno<br><br><b>Descripcion:</b>  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br><b>Precio:</b> $12.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Bruma de Rosas Encantadas<br><br><b>Descripcion:</b> Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br><b>Precio:</b> $9.99<br><br>
+                <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Melodía de Lavanda Serena<br><br><b>Descripcion:</b>  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br><b>Precio:</b> $14.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>    
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m7.png" alt="archivo no encontrado"><br><br>Nombre: Suspiro de Cerezas Rosadas<br><br>Descripcion:  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br>Precio: $16.99<br><br><button onclick="formulario()" style="margin-top: 7%;">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m8.png" alt="archivo no encontrado"><br><br>Nombre: Encanto de Orquídeas<br><br>Descripcion: Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br>Precio: $14.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m9.png" alt="archivo no encontrado"><br><br>Nombre: Rocío de Mariposas Doradas<br><br>Descripcion: Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br>Precio: $8.99<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m7.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Suspiro de Cerezas Rosadas<br><br><b>Descripcion:</b>  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br><b>Precio:</b> $16.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m8.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Encanto de Orquídeas<br><br><b>Descripcion:</b> Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br><b>Precio:</b> $14.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m9.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Rocío de Mariposas Doradas<br><br><b>Descripcion:</b> Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br><b>Precio:</b> $8.99<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
     </div>
-    <div id="division_catalogo">
-        <hr>
-        <h1>Promociones</h1>
-        <hr>
+    <div class="row" id="division_catalogo">
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
+        <div class="col-md-4">
+            <h1 class="col-md-12">Promociones</h1>
+        </div>
+        <div class="col-md-4">
+            <hr id="hrch">
+        </div>
     </div>
     <div class="contenedor">
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m1.png" alt="archivo no encontrado"><br><br>Nombre: Coco Mademoiselle<br><br>Descripcion: Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m2.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
-        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m3.png" alt="archivo no encontrado"><br><br>Nombre: Aroma de Luna Plateada<br><br>Descripcion: Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br>Precio: $14.99<br><br>Promocion: 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button onclick="formulario()">Comprar</button></fieldset>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m1.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Coco Mademoiselle<br><br><b>Descripcion:</b> Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br><b>Precio:</b> $6.99<br><br><b>Promocion:</b> 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
+                <button class="btn btn-dark" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m2.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Rocío del Amanecer<br><br><b>Descripcion:</b> Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br><b>Precio:</b> $10.99<br><br><b>Promocion:</b> 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
+                <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion mujeres/locion m3.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> Aroma de Luna Plateada<br><br><b>Descripcion:</b> Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
+                <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
+            </div>
+        </div>    
     </div>
     <footer>
         <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
